// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateTokensCss > generates correct CSS for a standard surface group 1`] = `
"
/* AUTO-GENERATED by src/lib/generator.ts */
:root {
  /* Elevation */
  --shadow-sm: 0 1px 2px 0 light-dark(oklch(0 0 0 / 0.05), oklch(1 0 0 / 0.15));
  --shadow-md: 
    0 4px 6px -1px light-dark(oklch(0 0 0 / 0.1), oklch(1 0 0 / 0.15)), 
    0 2px 4px -1px light-dark(oklch(0 0 0 / 0.06), oklch(1 0 0 / 0.1));
  --shadow-lg: 
    0 10px 15px -3px light-dark(oklch(0 0 0 / 0.1), oklch(1 0 0 / 0.15)), 
    0 4px 6px -2px light-dark(oklch(0 0 0 / 0.05), oklch(1 0 0 / 0.1));
  --shadow-xl: 
    0 20px 25px -5px light-dark(oklch(0 0 0 / 0.1), oklch(1 0 0 / 0.15)), 
    0 10px 10px -5px light-dark(oklch(0 0 0 / 0.04), oklch(1 0 0 / 0.1));
  /* Focus */
  --focus-ring-color: light-dark(
    oklch(0.45 0.2 var(--hue-brand, 250)),
    oklch(0.75 0.2 var(--hue-brand, 250))
  );
}

.surface-page {
  --surface-token: light-dark(
    oklch(0.98 0 0),
    oklch(0.1 0 0)
  );
  --text-high-token: light-dark(
    oklch(0 0 0),
    oklch(1 0 0)
  );
  --text-subtle-token: light-dark(
    oklch(0.4184 0 0),
    oklch(0.893 0 0)
  );
  --text-subtlest-token: light-dark(
    oklch(0.5085 0 0),
    oklch(0.8406 0 0)
  );
  --border-dec-token: light-dark(
    oklch(0 0 0 / 0.0515),
    oklch(0.9866 0 0 / 0.2911)
  );
  --border-int-token: light-dark(
    oklch(0 0 0 / 0.0515),
    oklch(0.9866 0 0 / 0.2911)
  );
}
.surface-page:hover {
  --surface-token: light-dark(
    oklch(0.95 0 0),
    oklch(0.15 0 0)
  );
}

.surface-card {
  --surface-token: light-dark(
    oklch(1 0 0),
    oklch(0.2 0 0)
  );
  --text-high-token: light-dark(
    oklch(0 0 0),
    oklch(1 0 0)
  );
  --text-subtle-token: light-dark(
    oklch(0.4586 0 0),
    oklch(0.896 0 0)
  );
  --text-subtlest-token: light-dark(
    oklch(0.54 0 0),
    oklch(0.8468 0 0)
  );
  --border-dec-token: light-dark(
    oklch(0.1935 0 0 / 0.0612),
    oklch(0.9926 0 0 / 0.214)
  );
  --border-int-token: light-dark(
    oklch(0.1935 0 0 / 0.0612),
    oklch(0.9926 0 0 / 0.214)
  );
}
"
`;

exports[`generateTokensCss > generates palette tokens when configured 1`] = `
"
/* AUTO-GENERATED by src/lib/generator.ts */
:root {
  /* Elevation */
  --shadow-sm: 0 1px 2px 0 light-dark(oklch(0 0 0 / 0.05), oklch(1 0 0 / 0.15));
  --shadow-md: 
    0 4px 6px -1px light-dark(oklch(0 0 0 / 0.1), oklch(1 0 0 / 0.15)), 
    0 2px 4px -1px light-dark(oklch(0 0 0 / 0.06), oklch(1 0 0 / 0.1));
  --shadow-lg: 
    0 10px 15px -3px light-dark(oklch(0 0 0 / 0.1), oklch(1 0 0 / 0.15)), 
    0 4px 6px -2px light-dark(oklch(0 0 0 / 0.05), oklch(1 0 0 / 0.1));
  --shadow-xl: 
    0 20px 25px -5px light-dark(oklch(0 0 0 / 0.1), oklch(1 0 0 / 0.15)), 
    0 10px 10px -5px light-dark(oklch(0 0 0 / 0.04), oklch(1 0 0 / 0.1));
  /* Focus */
  --focus-ring-color: light-dark(
    oklch(0.45 0.2 var(--hue-brand, 250)),
    oklch(0.75 0.2 var(--hue-brand, 250))
  );
  /* Data Visualization */
  --chart-1: light-dark(
    oklch(0.6484 0.15 0),
    oklch(0.7588 0.15 0)
  );
  --chart-2: light-dark(
    oklch(0.6484 0.15 120),
    oklch(0.7588 0.15 120)
  );
  --chart-3: light-dark(
    oklch(0.6484 0.15 240),
    oklch(0.7588 0.15 240)
  );
}
"
`;

exports[`generateTokensCss > handles missing background values gracefully 1`] = `
"
/* AUTO-GENERATED by src/lib/generator.ts */
:root {
  /* Elevation */
  --shadow-sm: 0 1px 2px 0 light-dark(oklch(0 0 0 / 0.05), oklch(1 0 0 / 0.15));
  --shadow-md: 
    0 4px 6px -1px light-dark(oklch(0 0 0 / 0.1), oklch(1 0 0 / 0.15)), 
    0 2px 4px -1px light-dark(oklch(0 0 0 / 0.06), oklch(1 0 0 / 0.1));
  --shadow-lg: 
    0 10px 15px -3px light-dark(oklch(0 0 0 / 0.1), oklch(1 0 0 / 0.15)), 
    0 4px 6px -2px light-dark(oklch(0 0 0 / 0.05), oklch(1 0 0 / 0.1));
  --shadow-xl: 
    0 20px 25px -5px light-dark(oklch(0 0 0 / 0.1), oklch(1 0 0 / 0.15)), 
    0 10px 10px -5px light-dark(oklch(0 0 0 / 0.04), oklch(1 0 0 / 0.1));
  /* Focus */
  --focus-ring-color: light-dark(
    oklch(0.45 0.2 var(--hue-brand, 250)),
    oklch(0.75 0.2 var(--hue-brand, 250))
  );
}

.surface-unknown {
  --surface-token: light-dark(
    oklch(0 0 0),
    oklch(0 0 0)
  );
  --text-high-token: light-dark(
    oklch(1 0 0),
    oklch(1 0 0)
  );
  --text-subtle-token: light-dark(
    oklch(0.893 0 0),
    oklch(0.893 0 0)
  );
  --text-subtlest-token: light-dark(
    oklch(0.8406 0 0),
    oklch(0.8406 0 0)
  );
}
"
`;
